@@ -369,3 +369,10 @@ Spreedly Core gateway (December 2012)
 Pin gateway (February 2013)
 
 * Myles Eftos (madpilot)
+
+Merchant Warrior
+
+* Ben Bruscella (benbruscella)
+* Дмитрий Василец (pronix)
+* Fodoj
+* Nathaniel Talbott (ntalbott)
