@@ -30,6 +30,7 @@
 * Add Pin gateway [madpilot]
 * Balanced: Added support for on_behalf_of_uri to capture [cwise]
 * Litle: Add support for passing an order_source [forest]
+* Add Merchant Warrior gateway [pronix, Fodoj, ntalbott]
 
 == Version 1.29.3 (December 7, 2012)
 
